testdata/baselines/reference/submodule/conformance/parserArrowFunctionExpression4.errors.txt
parserArrowFunctionExpression4.ts(1,1): error TS2304: Cannot find name 'a'.
parserArrowFunctionExpression4.ts(1,17): error TS2304: Cannot find name 'a'.


==== parserArrowFunctionExpression4.ts (2 errors) ====
    a = (() => { }, a)
    ~
!!! error TS2304: Cannot find name 'a'.
                    ~
!!! error TS2304: Cannot find name 'a'.